# sura

./: .gitignore  README.md  Steam Game CLI.ahk  SuraGameWatch.ahk  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
